--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_colorpicker: ^1.1.0
   flutter_bloc: ^9.1.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
